syntax="proto3";


option go_package = "retail/shop_code";


message CreateProduct{
    string product_name=1;
    int64 price=2;
    int64 quantity=3; 
}

message ProductResponse{
    string product_id=1;
    string product_name=2;
    int64 price=3;
    int64 quantity=4; 
    string message=5;
}


message ProductInfo{
    int64 price=1;
    int64 quantity=2; 
}

message ProductInformation{
    int64 product_id=1;
    string product_name=2;
    int64 price=3;
    int64 quantity=4; 
}

message Products{
    string Product=1;
}

message Blank{

}

service Product {
    rpc CreatingProduct (CreateProduct) returns (ProductResponse);
    rpc FetchingProducts(Blank) returns (Products) ;
    rpc UpdateProduct (ProductInfo) returns (ProductInformation);
    rpc FetchProductWithID (Blank) returns (ProductInformation);
}


message OrderRequest{
    string customer_id=1;
    string product_id=2;
    int64 quantity=3;
}


message OrderResponse{
    string order_id=1;
    string product_id=2;
    int64 quantity=3;
    string status=4;
}

service Order {
    rpc CreateOrder (OrderRequest) returns (OrderResponse);
    rpc ViewOrder (Blank) returns (OrderResponse);
}